3.0912:
 - Fix: get_fleet_for returns berth appropriate ships.
 - Fix: embassy stash could be exploited.
 - Fix: trade ministry's supply chain tab now works after selecting ship tab.
 - Add: build_ships API to automatically spread out ship building across multiple yards.

3.0911:
 - Add: Reduce opacity for less-well-controlled stars.
 - Add: Upped limit of how many ships that could be ordered via Shipyard to 600.
 - Add: Fleet limit increased to 600 per send.
 - Add: Excavator distance shown in Arch Min.
 - Fix: Stop fast voting from passing a proposition multiple times.
 - Fix: Embassies must not be flattened to count as a primary embassy.

3.0910:
 - Add: Unread option in inbox UI
 - Add: view_unread Inbox API
 - Add: Stations auto-seize
 - Add: Voting allowed in embassy
 - Fix: If star is a target, no grouping.
 - Fix: Detonators work properly on arrival.
 - Fix: Offline Essentia veins can be repaired again in UI.
 - Mod: Stations sort to bottom of UI list.
 - Fix: Allied fighters let allies past.
 - Add: Members Only Station law added.
 - Add: BHG Passport law added.

3.0909:
 - Add: Admin UI to set alliance logo.
 - Add: Admin UI display more info on bodies & stars.
 - Fix: Only one notification per empire per star on probe detection.
 - Add: Fleet Lite
 - Mod: Sweepers adjusted for balance.
 - Fix: Most buildings should no longer ignore uni level.
 - Add: Overheating Parliament does damage.
 - Fix: Buildings should no longer get stuck in upgrading state.
 - Add: Allow login with "#<userid>".
 - Mod: "#" no longer permitted as leading character in empire names.
 - Mod: Propaganda doesn't count as often for missions.
 - Mod: incoming ships list ordered correctly.
 - Fix: Spies doing "Political Propaganda" and "Security Sweep" can be Assassinated/Abducted.
 - Add: Essentia veins can be drained.
 - Mod: Archaeology searches now take 5 hours, 50 minutes to complete. (thanks tmtowtdi!)
 - Mod: Bleeders replicate.
 - Mod: Disable chat for sitters.