@@ -42,6 +42,7 @@ after handle_arrival_procedures => sub {
     # let's claim this for our very own!
     else {
         $planet->lock;
+        $planet->notes(undef);
         $planet->convert_to_station($empire);
         $empire->send_predefined_message(
             tags        => ['Colonization','Alert'],
