@@ -1,0 +1,1 @@
+alter table body add column notes text;
