@@ -3,6 +3,7 @@
  - Fix: embassy stash could be exploited.
  - Fix: trade ministry's supply chain tab now works after selecting ship tab.
  - Add: build_ships API to automatically spread out ship building across multiple yards.
+ - Add: per-colony notes in PCC
 
 3.0911:
  - Add: Reduce opacity for less-well-controlled stars.
